--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,8 @@
     <meta name="twitter:image" content="http://localhost:3000/assets/twitter-card.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="logo.png?v=2">
-    <link rel="apple-touch-icon" href="logo.png?v=2">
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png?v=2">
+    <link rel="apple-touch-icon" href="/logo.png?v=2">
 
     <!-- Manifest for PWA -->
     <link rel="manifest" href="/manifest.json">
@@ -57,7 +57,7 @@
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
