Final cleanup: Update metadata URLs and image paths for production

--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://localhost:3000/">
+    <meta property="og:url" content="https://easy-dawnloader.vercel.app/">
     <meta property="og:title" content="Free Video Downloader - YouTube, Facebook, Instagram, TikTok">
     <meta property="og:description"
         content="Download videos from YouTube, Facebook, Instagram, and TikTok for free. Support for HD quality, MP3 audio extraction, and multiple formats.">
-    <meta property="og:image" content="http://localhost:3000/assets/og-image.png">
+    <meta property="og:image" content="https://easy-dawnloader.vercel.app/logo.png">
     <meta property="og:site_name" content="EasyDownloader">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://localhost:3000/">
+    <meta name="twitter:url" content="https://easy-dawnloader.vercel.app/">
     <meta name="twitter:title" content="Free Video Downloader - YouTube, Facebook, Instagram, TikTok">
     <meta name="twitter:description"
         content="Download videos from YouTube, Facebook, Instagram, and TikTok for free. HD quality, MP3 audio extraction, and multiple formats.">
-    <meta name="twitter:image" content="http://localhost:3000/assets/twitter-card.png">
+    <meta name="twitter:image" content="https://easy-dawnloader.vercel.app/logo.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/logo.png?v=2">
@@ -44,7 +44,7 @@
     <meta name="theme-color" content="#667eea">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="http://localhost:3000/">
+    <link rel="canonical" href="https://easy-dawnloader.vercel.app/">
 
     <!-- Preconnect for Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -66,7 +66,7 @@
       "@type": "WebApplication",
       "name": "EasyDownloader",
       "description": "Free video downloader for YouTube, Facebook, Instagram, and TikTok",
-      "url": "http://localhost:3000/",
+      "url": "https://easy-dawnloader.vercel.app/",
       "applicationCategory": "MultimediaApplication",
       "operatingSystem": "Any",
       "offers": {
@@ -92,7 +92,7 @@
     <nav class="navbar" role="navigation" aria-label="Main navigation">
         <div class="nav-container">
             <div class="nav-brand">
-                <img src="logo.png" alt="EasyDownloader Logo" class="logo-img">
+                <img src="/logo.png" alt="EasyDownloader Logo" class="logo-img">
                 <h1 class="brand-name">EasyDownloader</h1>
             </div>
 
