Force cache bust: update script.js version to v3

--- a/public/index.html
+++ b/public/index.html
@@ -380,7 +380,7 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="/script.js"></script>
+    <script src="/script.js?v=3"></script>
     <script>
         // Initialize Feather Icons
         if (window.feather) {
