Deployment Verify: Add version stamp v2.1.0 to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -387,6 +387,7 @@
             feather.replace();
         }
     </script>
+    <div style="text-align:center; opacity:0.3; font-size:10px; margin-top:20px;">v2.1.0-HyperResilient</div>
 </body>
 
 </html>
